--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # ignore all configure files
 *.cfg
 
-# ignore all python notebooks
-*.ipynb
+# ignore temp python notebooks
+create_datalake.ipynb
 
 # ignore python notebooks template
 .ipynb_checkpoints
